<resources>
    <string name="app_name">E-Commerce</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="favorites">Favorites</string>
    <string name="cart">Cart</string>
    <string name="user">User</string>
    <string name="dil_language">Dil/Language</string>
    <string name="user_info">User Info</string>
    <string name="my_orders">My Orders</string>
    <string name="contact_us">Contact Us</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="security_warnings">Security Warnings</string>
    <string name="protection_of_personal_data">Protection of Personal Data</string>
    <string name="go_to_checkout">GO TO CHECKOUT</string>
    <string name="payment">Payment</string>
    <string name="current_address">Current Address</string>
    <string name="new_address">New Address</string>
    <string name="save_this_address">Save This Address</string>
    <string name="credit_card_info">Credit Card Info</string>
    <string name="credit_card_number">Credit card number</string>
    <string name="month_year">Month / Year</string>
    <string name="slash">/</string>
    <string name="cvc">CVC</string>
    <string name="buy">BUY</string>
    <string name="name_with_twodot">Name:</string>
    <string name="surname_with_twodot">Surname:</string>
    <string name="address_with_twodot">Address:</string>
    <string name="phone_with_twodot">Phone:</string>
    <string name="icon_for_log_out">Icon for log out</string>
    <string name="icon_for_editing_user_info">Icon for editing user info</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_surname">Enter your surname</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="save">Save</string>
    <string name="user_log_in">User Log In</string>
    <string name="please_enter_your_e_mail">Please enter your e-mail</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="login">Log In</string>
    <string name="don_t_have_an_account_n_sign_up_here">Don\'t have an account? \n Sign up here!</string>
    <string name="user_sign_up">User Sign Up</string>
    <string name="please_enter_your_password_again">Please enter your password again</string>
    <string name="sign_up">Sign Up</string>
    <string name="cargo_truck_icon">Cargo truck icon</string>
    <string name="product_image">Product image</string>
    <string name="decrease_product_amount_icon">Decrease product amount icon</string>
    <string name="increase_product_amount_icon">Increase product amount icon</string>
    <string name="x">x</string>
    <string name="turkce">Türkçe</string>
    <string name="english">English</string>
    <string name="okay">Okay</string>
    <string name="userMenu">User</string>
    <string name="review">Review</string>
    <string name="you_will_get_you_cargo_in_days">You will get you cargo in %1$d days</string>
    <string name="for_you">For You</string>
    <string name="delivered">Delivered</string>
    <string name="not_delivered">Not Delivered</string>
    <string name="delete_all_products">Delete All Products</string>
    <string name="do_you_want_to_delete_all_of_your_products_from_cart">Do you want to delete all of your products from cart?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_want_to_delete_this_item_from_your_cart">Do you want to delete this item from your cart?</string>
    <string name="delete">Delete</string>
    <string name="you_need_to_login">You need to login</string>
    <string name="you_need_to_login_to_buy_your_products_in_your_cart_do_you_want_to_go_to_login_page">You need to login to buy your products in your cart. Do you want to go to login page?</string>
    <string name="in_cart">IN CART</string>
    <string name="please_fill_your_credit_card_information">Please fill your credit card information.</string>
    <string name="please_fill_your_address_information">Please fill your address information.</string>
    <string name="new_address_saved_to_your_user_information">New address saved to your user information.</string>
    <string name="credit_card_s_holder_name">Credit card\'s holder name</string>
    <string name="expire_date">Expire Date</string>
    <string name="security_code">Security Code</string>
    <string name="cvc_cvv">CVC / CVV</string>
    <string name="save_credit_card">Save Credit Card</string>
    <string name="credit_card">Credit Card</string>
    <string name="credit_card_s_holder_name_and_surname">Credit card\'s holder name and surname</string>
    <string name="add_new_card">Add New Card</string>
    <string name="do_you_want_to_delete_this_credit_card">Do you want to delete this credit card?</string>
    <string name="delete_card">Delete Card</string>
    <string name="my_credit_cards">My Credit Cards</string>
    <string name="credit_cards">Credit Cards</string>
    <string name="user_information">User Information</string>
    <string name="credit_card_number_hint">**** **** **** ****</string>
    <string name="store_locations">Store Locations</string>
    <string name="language">Language</string>
    <string name="please_fill_all_of_the_fields">Please fill all of the fields.</string>
    <string name="please_fill_your_phone_number_correctly">Please fill your phone number correctly.</string>
    <string name="please_select_a_credit_card">Please select a credit card.</string>
</resources>