<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.user.UserInfoEditFragment"
    android:background="@color/background">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/user"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/enter_your_name"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/etUserSurname"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/etUserName"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/enter_your_surname"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/etUserAddress"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintTop_toBottomOf="@id/etUserSurname"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/enter_your_address"
        android:gravity="top"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/etUserPhone"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/etUserAddress"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/enter_your_phone"
        android:layout_marginTop="10dp"
        android:inputType="phone"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUserPhone"
        android:text="@string/save"
        android:layout_marginTop="50dp" />

</androidx.constraintlayout.widget.ConstraintLayout>