<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.user.my_credit_cards.UserCreditCardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvCreditCards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/credit_cards"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCreditCards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/tvCreditCards" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddNewCreditCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/add_new_card"
                android:textColor="@color/main"
                app:layout_constraintTop_toBottomOf="@id/rvCreditCards"
                app:strokeColor="@color/main"
                app:strokeWidth="2dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintAddNewCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/btnAddNewCreditCard">

                <TextView
                    android:id="@+id/tvCardNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/credit_card_number"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/etCardNumber"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/gray_background_slightly_rounded"
                    android:hint="@string/credit_card_number_hint"
                    android:inputType="number"
                    android:nextFocusDown="@id/etCardHolder"
                    android:paddingStart="15dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/tvCardNumber" />

                <TextView
                    android:id="@+id/tvCardHolder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/credit_card_s_holder_name"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etCardNumber" />

                <EditText
                    android:id="@+id/etCardHolder"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/gray_background_slightly_rounded"
                    android:hint="@string/credit_card_s_holder_name_and_surname"
                    android:inputType="text"
                    android:nextFocusDown="@id/etExpireDate"
                    android:paddingStart="15dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/tvCardHolder" />

                <TextView
                    android:id="@+id/tvExpireDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/expire_date"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etCardHolder" />

                <EditText
                    android:id="@+id/etExpireDate"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/gray_background_slightly_rounded"
                    android:hint="@string/month_year"
                    android:inputType="phone"
                    android:nextFocusDown="@id/etSecurityCode"
                    android:paddingStart="15dp"
                    app:layout_constraintEnd_toStartOf="@id/verticalGuideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvExpireDate" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/verticalGuideline"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <TextView
                    android:id="@+id/tvSecurityCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/security_code"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/verticalGuideline"
                    app:layout_constraintTop_toBottomOf="@id/etCardHolder" />

                <EditText
                    android:id="@+id/etSecurityCode"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/gray_background_slightly_rounded"
                    android:hint="@string/cvc_cvv"
                    android:inputType="number"
                    android:maxLength="4"
                    android:paddingStart="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/verticalGuideline"
                    app:layout_constraintTop_toBottomOf="@id/tvExpireDate" />

                <Button
                    android:id="@+id/btnSaveCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/save_credit_card"
                    app:layout_constraintTop_toBottomOf="@id/etSecurityCode" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>