<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.cart.payment.PaymentFragment"
    android:background="@color/background">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/payment"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/black_border_slightly_rounded"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        tools:layout_editor_absoluteX="9dp">

        <LinearLayout
            android:id="@+id/linlayAddressTitleContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvUserAddress"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/current_address"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/ivSwapAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@color/sub2"
                android:src="@drawable/ic_left" />

            <TextView
                android:id="@+id/tvUserAddressNew"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="5"
                android:text="@string/new_address"
                android:textSize="18sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/etUserAddressInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/linlayAddressTitleContainer"
            tools:text="Aasdjadskkj adsdas adskjdasadsk adskjda asadskj adshjadskdakj adsjkldaskjlkjl adsjklkjladskjljadsklkjladskjlkjldas kjldaskjlkjldaskjldaskjljkldas kjldkjaslkjl" />

        <Button
            android:id="@+id/btnSaveAdress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_this_address"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etUserAddressInfo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintMiddle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/black_border_slightly_rounded"
        app:layout_constraintTop_toBottomOf="@id/constraintTop">

        <TextView
            android:id="@+id/tvCreditCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/credit_card_info"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCreditCardNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/credit_card_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCreditCard" />

        <EditText
            android:id="@+id/etCreditCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@id/tvCreditCard" />

        <TextView
            android:id="@+id/tvCreditCardExpireDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/month_year"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etCreditCardNumber" />

        <LinearLayout
            android:id="@+id/linlayExpireDateContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/tvCreditCardExpireDate"
            app:layout_constraintStart_toStartOf="@id/tvCreditCardExpireDate"
            app:layout_constraintTop_toBottomOf="@id/tvCreditCardExpireDate">

            <EditText
                android:id="@+id/etCreditCardExpiryMonth"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2" />

            <TextView
                android:id="@+id/tvCreditCardExpireDateDivider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/slash" />

            <EditText
                android:id="@+id/etCreditCardExpiryYear"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvCreditCardCvc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/cvc"
            app:layout_constraintStart_toEndOf="@id/tvCreditCardExpireDate"
            app:layout_constraintTop_toTopOf="@id/tvCreditCardExpireDate" />

        <EditText
            android:id="@+id/etCreditCardCvc"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3"
            app:layout_constraintStart_toStartOf="@id/tvCreditCardCvc"
            app:layout_constraintTop_toBottomOf="@id/tvCreditCardCvc" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/cart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/constraintMiddle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCartItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvCart"
        app:layout_constraintBottom_toTopOf="@id/linlayCheckOutContainer"/>

    <LinearLayout
        android:id="@+id/linlayCheckOutContainer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/sub2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:text="200.000" />

        <Button
            android:id="@+id/btnBuy"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:text="@string/buy"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>