<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.user.UserInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintTop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideLine"
        android:background="@color/backgroundSoft">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/user_information"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivLogOutUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/icon_for_log_out"
            android:src="@drawable/ic_logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivEditUserInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/icon_for_editing_user_info"
            android:src="@drawable/ic_edit"
            app:layout_constraintEnd_toStartOf="@id/ivLogOutUser"
            app:layout_constraintTop_toTopOf="@id/ivLogOutUser" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivUserImage"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_person_gray"
            app:shapeAppearanceOverlay="@style/Circular"
            android:scaleType="fitXY"/>

        <ImageView
            android:id="@+id/ivChangeImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/ivUserImage"
            app:layout_constraintEnd_toEndOf="@id/ivUserImage"
            android:src="@drawable/ic_add_photo"/>

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ivUserImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Enes Durak"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"/>

    <ImageView
        android:id="@+id/ivAddressIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_address"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvUserAddressInfo"
        app:layout_constraintBottom_toBottomOf="@id/tvUserAddressInfo"/>

    <TextView
        android:id="@+id/tvUserAddressInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivAddressIcon"
        app:layout_constraintTop_toBottomOf="@id/constraintTop"
        tools:layout_editor_absoluteY="326dp"
        tools:text="ADsdaadskjjadskj adsadsjadskjadksadsjkj
        adsjkjadsdkjaskjadsads adsadshjdashdashj adshjadshjadshj" />

    <View
        android:id="@+id/horizontalLineAddress"
        android:layout_width="150dp"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/tvUserAddressInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/ivPhoneIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvUserPhoneInfo"
        app:layout_constraintBottom_toBottomOf="@id/tvUserPhoneInfo"
        android:src="@drawable/ic_phone"/>

    <TextView
        android:id="@+id/tvUserPhoneInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalLineAddress"
        tools:layout_editor_absoluteY="395dp"
        tools:text="+90555555555" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>